# quelch

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  build_output.json  build_output_clean.json  hello.md
.agents/skills/release/: SKILL.md
.github/workflows/: ci.yml  release.yml
crates/quelch/: Cargo.toml
crates/quelch/src/: ai.rs  cli.rs  copilot.rs  lib.rs  main.rs  search.rs  text.rs
crates/quelch/src/agent/: bundle.rs  error.rs  mod.rs
crates/quelch/src/agent/targets/: claude_code.rs  codex.rs  copilot_cli.rs  copilot_studio.rs  markdown.rs  mod.rs  vscode_copilot.rs
crates/quelch/src/azure/: mod.rs  schema.rs
crates/quelch/src/azure/deploy/: apply.rs  bicep.rs  destroy.rs  diff_view.rs  indexer.rs  logs.rs  mod.rs  naming.rs  whatif.rs
crates/quelch/src/azure/deploy/snapshots/: quelch__azure__deploy__bicep__tests__generates_minimal_bicep_for_ingest_deployment.snap  quelch__azure__deploy__bicep__tests__generates_minimal_bicep_for_mcp_deployment.snap  quelch__azure__deploy__bicep__tests__generates_onprem_has_no_container_app.snap  quelch__azure__deploy__bicep__tests__two_deployments_ingest.snap  quelch__azure__deploy__bicep__tests__two_deployments_mcp.snap  quelch__azure__deploy__diff_view__tests__render_full_snapshot.snap
crates/quelch/src/azure/rigg/: generate.rs  mod.rs  ownership.rs  plan.rs  pull.rs  push.rs  write.rs
crates/quelch/src/commands/: get.rs  mcp_key.rs  mod.rs  query.rs  reset.rs  search.rs  status.rs
crates/quelch/src/config/: data_sources.rs  env.rs  mod.rs  schema.rs  slice.rs  validate.rs
crates/quelch/src/cosmos/: client.rs  document.rs  error.rs  factory.rs  in_memory.rs  meta.rs  mod.rs  query_stream.rs
crates/quelch/src/dev/: mod.rs
crates/quelch/src/ingest/: backfill.rs  config.rs  connector_kind.rs  cycle.rs  mod.rs  rate_limit.rs  reconcile.rs  test_helpers.rs  window.rs  worker.rs
crates/quelch/src/init/: discover.rs  mod.rs  prereq.rs  prompts.rs  templates.rs
crates/quelch/src/mcp/: auth.rs  error.rs  expose.rs  mod.rs  schema.rs  server.rs
crates/quelch/src/mcp/filter/: cosmos_sql.rs  dates.rs  mod.rs  odata.rs  parser.rs
crates/quelch/src/mcp/handlers/: initialize.rs  mod.rs  tools_call.rs  tools_list.rs
crates/quelch/src/mcp/tools/: aggregate.rs  get.rs  list_sources.rs  mod.rs  query.rs  search.rs  search_api.rs
crates/quelch/src/mock/: azure.rs  confluence.rs  data.rs  jira.rs  mod.rs  sim.rs
crates/quelch/src/onprem/: common.rs  docker.rs  k8s.rs  mod.rs  systemd.rs
crates/quelch/src/sim/: azure_faults.rs  confluence_gen.rs  embedder.rs  jira_gen.rs  mod.rs  opts.rs  scheduler.rs  world.rs
crates/quelch/src/sources/: confluence.rs  jira.rs  mod.rs
crates/quelch/src/sync/: embedder.rs  mod.rs  phases.rs  state.rs
crates/quelch/src/tui/: app.rs  events.rs  input.rs  layout.rs  metrics.rs  mod.rs  prefs.rs  spinner.rs  status.rs  tracing_layer.rs
crates/quelch/src/tui/widgets/: azure_panel.rs  drilldown.rs  help_overlay.rs  live_feed.rs  log_view.rs  mod.rs  source_card.rs  source_table.rs  test.rs
crates/quelch/tests/: agent_generate.rs  azure_plan.rs  cli_validate.rs  end_to_end.rs  integration_test.rs  mcp_server.rs  sim_headless.rs  tui_snapshot.rs
crates/quelch/tests/fixtures/: config_overlapping.yaml  config_undefined_expose.yaml  config_undefined_source.yaml  quelch.minimal.yaml  whatif_sample.json
docs/: README.md  agent-generation.md  agents.md  architecture.md  cli.md  configuration.md  copilot-studio-onknowledgerequested.md  deployment.md  examples.md  getting-started.md  mcp-api.md  sync.md
docs/superpowers/plans/: 2026-04-13-cicd-and-release-skill.md  2026-04-13-core-engine.md  2026-04-19-quelch-tui.md  2026-04-20-quelch-tui-sim.md  2026-05-03-quelch-v2-implementation.md
docs/superpowers/specs/: 2026-04-19-quelch-tui-design.md  2026-04-20-quelch-tui-sim-design.md  2026-04-30-quelch-rearchitecture-design.md
