[workspace]
resolver = "2"
members = [
    "crates/quelch",
]

[workspace.package]
version = "0.7.0"
edition = "2024"
authors = ["Kristofer Liljeblad <kristofer@mklab.se>"]
license = "MIT"
repository = "https://github.com/mklab-se/quelch"
rust-version = "1.94.1"

[workspace.dependencies]
# CLI
clap = { version = "4.5", features = ["derive", "wrap_help"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-native-roots"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Env var expansion
shellexpand = "3"

# Directories
dirs = "6.0"

# Testing
tempfile = "3"
wiremock = "0.6"

# Encoding
base64 = "0.22"

# Async traits
trait-variant = "0.1"

# Terminal colors
colored = "2.1"

# Mock server
axum = "0.8"

# AI integration
ailloy = { version = "0.7.2", default-features = false, features = ["config-tui"] }

# Async streams
futures = "0.3"

# Duration parsing
humantime = "2"

# Random
rand = "0.8"

# Tokio utilities
tokio-util = { version = "0.7", features = ["rt"] }

# CLI testing
assert_cmd = "2"
