[package]
name = "quelch"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Ingest data from Jira, Confluence, and more directly into Azure AI Search"
readme = "../../README.md"
keywords = ["azure", "search", "jira", "confluence", "ingest"]
categories = ["command-line-utilities"]

[lib]
name = "quelch"
path = "src/lib.rs"

[[bin]]
name = "quelch"
path = "src/main.rs"

[dependencies]
clap.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
chrono.workspace = true
tokio.workspace = true
reqwest.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
shellexpand.workspace = true
dirs.workspace = true
base64.workspace = true
trait-variant.workspace = true
axum.workspace = true
ailloy.workspace = true

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/quelch-v{ version }-{ target }.{ archive-format }"
bin-dir = "quelch{ binary-ext }"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"
